fix-visibility-value

--- a/css/styles.css
+++ b/css/styles.css
@@ -607,14 +607,14 @@ img {
   letter-spacing: 0.03em;
   color: var(--secondary-btn-text);
 
-  transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1),
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .filter-btn:hover,
 .filter-btn:focus,
 .current-filter-btn {
-  background: var(--main-btn-color);
+  background-color: var(--main-btn-color);
   color: var(--main-btn-text);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
@@ -708,10 +708,13 @@ img {
 
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .is-hidden {
   opacity: 0;
   pointer-events: none;
+  visibility: hidden;
 }
+
 .modal {
   position: absolute;
   top: 50%;
@@ -720,6 +723,7 @@ img {
 
   width: 528px;
   height: 581px;
+  visibility: visible;
 
   background-color: #fff;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -728,6 +732,7 @@ img {
 
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .modal-close {
   position: absolute;
   top: 8px;
